[package]
name = "voiturerc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build]
# default-target = "armv7-unknown-linux-gnueabihf"    # use this target if none is explicitly provided

[features]
default = [ 'fake-sensors' ] 
fake-sensors = []
real-sensors = [ 'dep:rppal' ]

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
nalgebra = "0.29.0"
rumqttc = "0.24.0"
tokio-util = "0.7.11"
rppal = { version = "0.17.1", optional = true }
anyhow = "1.0.86"
nmea-parser = "0.10.0"
